# SnipPyBite

./: .coverage  .pre-commit-config.yaml  README.md  db.sqlite  pyproject.toml  snippets.db
src/: models.py
src/snippybite/: __init__.py  __main__.py  api.py  cli.py  db.py  exceptions.py  models.py  repo.py  schemas.py  snippets.db
tests/: test_models.py
